bag with animation on mobileBurger fixed

--- a/src/widgets/navigation/Navigation.scss
+++ b/src/widgets/navigation/Navigation.scss
@@ -19,7 +19,6 @@
 		&:hover {
 			font-weight: 600;
 			font-size: 17px;
-			color: #f8d45f !important;
 		}
 	}
 }
